# controllers/patients.js
@@ -1,43 +1,38 @@
-const mongodb = require('../config/database');
+const Patient = require('../models/Patient')
 const objectId = require('mongodb').ObjectId;
 
-
-// home page 
-const homepage = (req, res) => {
-    res.send('Welcome to the hospital API');
-}
+// ==========================
+// controller for patient collection in mongodb
+// ===========================
 const getAllPatients =  async(req, res) => {
-    const patients = await mongodb
-    .getdatabase()
-    .db('hospital')
-    .collection('patients')
-    .find()
-    .toArray();
+    const patients = await Patient
+    .find();
     res.setHeader('Content-Type', 'application/json');
     res.status(200).json(patients);    
 };
 
+// ========================
 // get patient by id
+// ========================
+
 const getPatientById=  async(req, res) => {
     const patientId = new objectId(req.params.id);
-    const patients = await mongodb
-    .getdatabase()
-    .db('hospital')
-    .collection('patients')
+    const patients = await Patient
     .find({ _id: patientId});
-    patients.toArray().then(patients => {
         if(patients) {
             res.setHeader('Content-Type', 'application/json');
             res.status(200).json(patients);    
         } else {
             res.status(404).json({message: 'No patient found'});
         }
-    })  
-};
-
+    };
+// ======================
 //  create patient 
+// ======================
 const createpatient =  async(req, res) => {
-    const newpatient ={
+
+    try { 
+    const newpatient = await Patient.create({
         firstName : req.body.firstName,
         lastName: req.body.lastName,
         age: req.body.age,
@@ -46,24 +41,17 @@ const createpatient =  async(req, res) => {
         admissionDate: req.body.admissionDate,
         status: req.body.status,
         doctor: req.body.doctor
-    }
+    });
+    res.setHeader('Content-Type', 'application/json');
+    res.status(201).json(newpatient);
+    } catch (error) {
+        res.status(500).send('Error creating patient');
 
-    const response = await mongodb
-    .getdatabase()
-    .db('hospital')
-    .collection('patients')
-    .insertOne(newpatient);
-
-        if(response.acknowledged) {
-            res.status(201).json({
-                message: 'Patient created successfully',
-                id: Response.insertedId
-            });
-        } else {
-            res.status(500).json({message: ' Patient not created'});
-        }
     }
-// 
+}
+// ==============================
+// delete patient
+// ==============================
 
 const deletepatient =  async(req, res) => {
   const patientId = new objectId(req.params.id);
@@ -72,10 +60,7 @@ const deletepatient =  async(req, res) => {
         return res.status(400).json({message: 'Invalid patient id'});
        
     }
-    const response = await mongodb
-    .getdatabase()
-    .db('hospital')
-    .collection('patients')
+    const response = await Patient
     .deleteOne({ _id: patientId});
            if(response.deletedCount > 0) {
             res.status(200).json({
@@ -90,10 +75,13 @@ const deletepatient =  async(req, res) => {
         }
     }
 
-    const updatepatient =  async(req, res) => {
+// ==============================
+// update patient
+// ==============================
+
+const updatepatient =  async(req, res) => {
     const patientId = new objectId(req.params.id);
     const newpatient = {
-
         firstName: req.body.firstName,
         lastName: req.body.lastName,
         age: req.body.age,
@@ -104,10 +92,7 @@ const deletepatient =  async(req, res) => {
         doctor: req.body.doctor
     }
 
-    const response = await mongodb
-    .getdatabase()
-    .db('hospital')
-    .collection('patients')
+    const response = await Patient
     .replaceOne({ _id: patientId}, newpatient);
 
         if(response.modifiedCount > 0) {
@@ -119,13 +104,13 @@ const deletepatient =  async(req, res) => {
 
 
 
-
+// =====================
+// import router
+// =====================
 module.exports = {
-    homepage,
     getAllPatients,
     getPatientById,
     createpatient,
     deletepatient,
-    updatepatient,
-
+    updatepatient
 }
