# models/doctor.js
@@ -1,0 +1,22 @@
+const mongoose = require('mongoose');
+
+
+const doctorSchema = new mongoose.Schema({
+    name: {
+        type: String,
+        required: true,
+        trim: true       
+    },
+    specialty: {
+        type: String,
+        required: true,
+        trim: true
+    },
+    department: {
+        type: String,
+        required: true,
+        trim: true
+    }
+}, { timestamps: true });
+
+module.exports = mongoose.model('Doctor', doctorSchema);
