# routes/auth.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const router = express.Router();
+
+const authController = require('../controllers/auth.js');
+
+router.post('/register', authController.register);
+router.post('/login', authController.login);
+
+
+module.exports = router;
